syntax = "proto3";

import "common.proto";

message ActorImages {
    string avatar = 1;
    string banner = 2;
    string profile1 = 3;
    string profile2 = 4;
}

message CareerStatus {
    Date started = 1;
    bool is_active = 2;
    Date retried = 3;
}

message Actor {
    string id = 1;
    string name = 2;
    repeated string aliases = 3;
    repeated string name_patterns = 4;
    Gender gender = 5;
    string nationality = 7;
    Date dob = 8;
    string description = 9;
    CareerStatus career_status = 10;
    ActorImages images = 11;
    SundryThings sundry = 12;
    DateTime added_on = 350;
};
